2013-10-16  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (save_task_omp): Add ALTERABLE to MODIFY_TASK if given.

	* src/html/omp.xsl (html-edit-task-form): Add Alterable Task field if
	the task is New.

2013-10-16  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (create_task): Send alterable flag through to manager.

	* src/html/omp.xsl (task [details], new_task): Add Alterable Task field.
	(html-edit-task-form): Remove alterable clone icon.

2013-10-16  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_many): Build the default filter with the task ID
	when the task ID is given for the report case.  When a named filter is
	given add the task ID to the front of the filter.

	* src/html/omp.xsl (filter-window-part): Remove the filter param from
	the filter dropdown, otherwise it is used instead of the default in the
	-- case.
	(html-reports-table): Pass the task ID as extra param, so that get_many
	can ensure that it is in the filter.

2013-10-15  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (html-users-table): Use database field with same
	name for sorting "Roles" column.

2013-10-15  Matthew Mundell <matthew.mundell@greenbone.net>

	Make remaining Details window headings like others.

	* src/html/omp.xsl (tag [details]): Remove name heading to match other
	Details pages.  It's already in the name field.
	(get_nvts): Move page specific header icons slight to the right, as in
	other pages.
	(host): Move back link to list icon.

2013-10-15  Matthew Mundell <matthew.mundell@greenbone.net>

	Make Config window headings more like others.

	* src/html/omp.xsl (html-config-family-table): Drop Details from edit
	page name, as on Config page.  Move back link to list icon in header.
	Bold Family field.  Remove extra TD causing small empty column on right.
	(html-config-nvt-table): Drop Details from edit page name.  Move back