@@ -28052,6 +28052,7 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
 
 <xsl:template match="edit_my_settings">
   <xsl:apply-templates select="gsad_msg"/>
+  <xsl:apply-templates select="modify_setting_response"/>
 
   <div class="gb_window">
     <div class="gb_window_part_left"></div>
